...
// Created by Alec Lobato
//

/* Commented by Vlad Puriy
 The EULAView and LoginView classes both have a @Binding var showNextView: DisplayState property. This binding is passed from the ContentView, allowing the EULAView and LoginView to update the displayState based on user interactions.

 In the EULAView, the showNextView binding is used to update the displayState when the user accepts the EULA. When the user clicks the "Accept" button, the displayState is set to .login, triggering a transition to the LoginView.

 In the LoginView, the showNextView binding is used to update the displayState when the user successfully logs in. When the user clicks the "Login" button and their login is successful, the displayState is set to .mainTeacher, triggering a transition to the MainTeacherView.
 */

import SwiftUI



...
