...
                            
                            Button(action: {
                                withAnimation {
                                    showNextView = .selectRegistration
                                }
                            }) {
                                Text("Sign up here!")
                                    .foregroundColor(.blue)
                                    .padding(.leading, -4.0)
                            }
                            Spacer()
                        }
                        .padding(.top, 10)
...
